<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_current_tasks"
            android:icon="@drawable/ic_tasks"
            android:title="@string/tasks" />
        <item
            android:id="@+id/nav_done_tasks"
            android:icon="@drawable/ic_done_tasks"
            android:title="@string/done_tasks" />
        <item
            android:id="@+id/nav_users"
            android:icon="@drawable/ic_users"
            android:title="@string/users" />
        <item
            android:id="@+id/nav_addresses"
            android:icon="@drawable/ic_addresses"
            android:title="@string/addresses" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_map"
            android:title="@string/map" />
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_exit"
            android:title="@string/exit" />
    </group>
</menu>
