<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">
        <EditText
            android:id="@+id/write_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/write_name"/>
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">
        <EditText
            android:id="@+id/write_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/write_pwd"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:layout_margin="8dp"
        android:id="@+id/sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"/>

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/inside_ip"
        android:id="@+id/inside_ip_checkbox"/>

</LinearLayout>